--- a/en/_posts/2023-02-15-2022.md
+++ b/en/_posts/2023-02-15-2022.md
@@ -26,7 +26,7 @@ Business-wise it was another tough year. Despite [clear message](/clarity/) that
 
 One of the reasons was my lack of leadership of the company. I delegated too much of the responsibilities and the whole vision of what we're building was lost in the translation and the product wasn't as good as we hoped it would be.
 
-Luckily, at the end of the year thanks to [talking to Nozbe's awesome customers](https://NoOffice.org/customers/), mentors and a business coach, I think I got the hang of it back! The last few months have been much better for our business and I've taken a much more *hands on* approach as a leader.
+Luckily, at the end of the year thanks to [talking to Nozbe's awesome customers](https://NoOffice.org/customers/), [one-on-one meetings with Nozbe directors](https://nooffice.org/connect/) and listening to my trusted group of mentors and a business coach, I think I got the hang of it back! The last few months have been much better for our business and I've taken a much more *hands on* approach as a leader.
 
 These past months, especially December of 2022 and January of 2023 I was working on a new positioning of Nozbe:
 
