--- a/en/_posts/2023-03-02-tweetbot.md
+++ b/en/_posts/2023-03-02-tweetbot.md
@@ -58,7 +58,7 @@ Every week there's more *tooting* or *posting* so I'm happy to report that I kin
 
 I've changed my Twitter bio to point people to my new Mastodon account (instead of a bird, the symbol is an elephant: 🐘):
 
-> Leading [@Nozbe](https://twitter.com/Nozbe) #productivity app | Writing #NoOffice book on #iPadOnly | Blog: [Michael.team](https://michael.team) | Husband & father of 3. 🐘 Find me at [http://social.nozbe.com/@michael][m]
+> Leading [@Nozbe](https://twitter.com/Nozbe) #productivity app - Writing #NoOffice book on #iPadOnly - Blog: [Michael.team](https://michael.team) - Husband & father of 3. 🐘 Find me at [http://social.nozbe.com/@michael][m]
 
 Now I'm mostly [posting on Mastodon first](https://social.nozbe.com/@michael/109952880052543980) and then [re-posting it on Twitter](https://twitter.com/MSliwinski/status/1631216912251191296).
 
