--- a/en/_posts/2023-03-02-tweetbot.md
+++ b/en/_posts/2023-03-02-tweetbot.md
@@ -1,6 +1,7 @@
 ---
 tags: [life]
 cover: "tweetbot.jpg"
+mastodon: https://social.nozbe.com/@michael/109953372705102025
 ---
 
 # Thank you Tweetbot and welcome Ivory! Or my gradual switch from Twitter to Mastodon!
