--- a/en/_posts/2023-03-02-tweetbot.md
+++ b/en/_posts/2023-03-02-tweetbot.md
@@ -47,7 +47,7 @@ How cool is that? Right? I've only started *"tooting"* on Mastodon so if you alr
 
 Our [Nozbe][n] Mastodon server is a private one and we don't accept people who are not Nozbe employees. And most of our team members even didn't set up their accounts there yet.
 
-However, if you want to set up a Mastodon account yourself, you can either [choose a server you want to set it up on](https://joinmastodon.org/servers) or [use my invite to set up on Mastodon.social][f] - it's one of the biggest servers out there. 
+However, if you want to set up a Mastodon account yourself, you can either [choose a server](https://joinmastodon.org/servers) or **[use my invite to set up on Mastodon.social][f]** - it's one of the biggest servers out there. 
 
 ## Step 3. Get [Ivory from Tapbots][i] and find your friends!
 
