newsletter on 2022 and mastodon link support

--- a/en/_posts/2023-02-13-mini13ultra.md
+++ b/en/_posts/2023-02-13-mini13ultra.md
@@ -1,6 +1,7 @@
 ---
 tags: [iphone]
 img: "mini13ultra.png"
+mastodon: https://social.nozbe.com/@michael/109858056139071483
 ---
 
 # The joy of iPhone 13 Mini and how it still beats the latest Samsung Galaxy 23 Ultra
