--- a/en/_posts/2023-02-15-2022.md
+++ b/en/_posts/2023-02-15-2022.md
@@ -1,6 +1,7 @@
 ---
 tags: [year]
 cover: "2022.jpg"
+mastodon: https://social.nozbe.com/@michael/109869380445308621
 ---
 
 # 2022 review - wind of change
