--- a/en/_posts/2023-02-15-2022.md
+++ b/en/_posts/2023-02-15-2022.md
@@ -104,7 +104,7 @@ In 2022 I also updated my [Journaling app](/journal/) for everyone to use. I cre
 
 We've had 2 [Nozbe Reunions](/reunion/) last year and we're planning one for this year. [The first one](/now220325/) was also the very first in-person after [COVID pandemic](/covid/). It was great to see my team together reunited. We visited two Polish cities: [Lublin](https://en.wikipedia.org/wiki/Lublin) in Spring and [Szczecin](https://en.wikipedia.org/wiki/Szczecin) in Autumn.
 
-In Summer, for my family I rented an [RV aka "camper"](https://en.wikipedia.org/wiki/Recreational_vehicle) and we traveled across Sweden 🇸🇪 and Denmark 🇩🇰. Leaving in a "moving home" or "house on wheels" for two weeks with my wife and 3 daughters is challenging but really fun. We're thinking of repeating this kind of holiday this year. My youngest daughter got to celebrate her 6th birthday in Legoland! [Yeah, I'm a big fan of Lego](/lego/).
+In Summer, for my family I rented an [RV aka "camper"](https://en.wikipedia.org/wiki/Recreational_vehicle) and we traveled across Sweden 🇸🇪 and Denmark 🇩🇰. Living in a "moving home" or "house on wheels" for two weeks with my wife and 3 daughters is challenging but really fun. We're thinking of repeating this kind of holiday this year. My youngest daughter got to celebrate her 6th birthday in Legoland! [Yeah, I'm a big fan of Lego](/lego/).
 
 We also had a two-week holiday in Iceland 🇮🇸 - a country I always dreamt of visiting. It was so much fun, especially that we have Icelandic friends who live there and could show us around.
 
