--- a/en/_posts/2023-03-02-tweetbot.md
+++ b/en/_posts/2023-03-02-tweetbot.md
@@ -6,16 +6,17 @@ mastodon: https://social.nozbe.com/@michael/109953372705102025
 
 # Thank you Tweetbot and welcome Ivory! Or my gradual switch from Twitter to Mastodon!
 
-[Twitter][t] used to be my favorite social network. My happy place. I know, there are trolls there and stuff, but the cool thing about Twitter was that I could choose to follow only a select number of people and using a brilliant [Tweetbot app](https://tapbots.com/tweetbot/). I had a social network without an algorithmic timeline. Just good old chronological timeline. I could follow my favorite people (Below 100) and I could tweet to people who'd choose to follow me (16K+ as of the moment of this post). This all changed when [Elon Musk bought Twitter](/escorting), [fired a bunch of people](/elon), brought back [suspended trolls](https://mobile.twitter.com/realDonaldTrump) and later, without any warning cut off access to third-party apps like my beloved Tweetbot. Here's what I'm going to do moving forward:
+[Twitter][t] used to be my favorite social network. My happy place. I know, there are trolls there and stuff, but the cool thing about Twitter was that I could choose to follow only a select number of people and using a brilliant [Tweetbot app][tt]. I had a social network without an algorithmic timeline. Just good old chronological timeline. I could follow my favorite people (Below 100) and I could tweet to people who'd choose to follow me (16K+ as of the moment of this post). This all changed when [Elon Musk bought Twitter](/escorting), [fired a bunch of people](/elon), brought back [suspended trolls](https://mobile.twitter.com/realDonaldTrump) and later, without any warning cut off access to third-party apps like my beloved Tweetbot. Here's what I'm going to do moving forward:
 
 <!--More-->
 
 ![{{ page.title }}](/img/{{ page.cover }})
+*Beautiful illustration by [Tapbots][tt] which best represents the past with Tweetbot and Twitter vs. the future with Ivory and Mastodon*
 
 * TOC
 {:toc}
 
-## Step 1. I uninstalled Tweetbot and requested no refund!
+## Step 1. I uninstalled Tweetbot and requested NO refund!
 
 As [Gruber pointed summarized the story](https://daringfireball.net/2023/03/tweetbot_and_twitterrific_face_the_cliff):
 
@@ -84,6 +85,6 @@ For all of you geeks out there who want to try something new, [join me on Mastod
 [i]: https://tapbots.com/ivory/
 [m]: https://social.nozbe.com/@michael
 [t]: https://twitter.com/MSliwinski
-
+[tt]: https://tapbots.com/tweetbot/
 [n]: https://michael.gratis/nozbe
 [np]: https://michael.gratis/nozbepersonal
