--- a/en/_posts/2023-03-03-news-11.md
+++ b/en/_posts/2023-03-03-news-11.md
@@ -1,6 +1,7 @@
 ---
 tags: [news]
 cover: "news-11.jpg"
+linked: https://www.linkedin.com/pulse/my-2022-review-did-you-do-yours-michael-sliwinski
 ---
 
 # My 2022 review - did you do yours?
