--- a/en/_posts/2023-05-02-augusto.md
+++ b/en/_posts/2023-05-02-augusto.md
@@ -59,7 +59,7 @@ We also shared an Easter meal together:
 
 And you know what?
 
-It wasn't a big deal, really. We just felt like we've been hanging like this all these years. Like it wasn't the first time we've met in person. It was so easy, so natural, so chill.
+We just felt like we've been hanging like this all these years. Like it wasn't the first time we've met in person. It was so easy, so natural, so chill.
 
 ## Turns out you can build a deep friendship online!
 
