--- a/en/_posts/2017-02-13-nozbe10.md
+++ b/en/_posts/2017-02-13-nozbe10.md
@@ -1,5 +1,5 @@
 ---
-tags: [nozbe,business]
+tags: [nozbe,business,imagazine]
 cover: "nozbe10.jpg"
 ---
 
@@ -10,6 +10,9 @@ This month we’re celebrating [Nozbe’s 10th birthday!][10]. It’s the perfec
 <!--More-->
 
 *Note: The following article appeared first in the [February '17 issue](/pl/10nozbe/) of [iMagazine][iMagazine] - the leading lifestyle magazine for Apple enthusiasts in Poland. I'm a regular contributor and write my monthly productivity column there.*
+
+* TOC
+{:toc}
 
 ## 2005 - why a Nozbe web app?
 
