fix soda bottle

--- a/en/_posts/2023-05-08-soda.md
+++ b/en/_posts/2023-05-08-soda.md
@@ -29,7 +29,7 @@ To make the headphones look better and hide the soda effect, I used some tape ar
 
 I love my Contigo water bottle but it fell once and broke in the crucial place where I normally hold it to carry. I thought it'd never be fixed as it broke in a spot that carries all the weight of the bottle and liquid. Well, with super glue and baking soda I fixed it:
 
-![{{ page.title }} 2](/img/soda-2.jpg)
+![{{ page.title }} 2](/img/soda-bottle.jpg)
 
 And I've been using the bottle for the last three months and no issues whatsoever! Amazing fix!
 
