No office fm 45 and updates

--- a/en/_posts/2023-06-22-ergo.md
+++ b/en/_posts/2023-06-22-ergo.md
@@ -1,6 +1,7 @@
 ---
 tags: [computers,lego]
 cover: "ergo.jpg"
+m: https://social.nozbe.com/@michael/110586900369450801
 ---
 
 # Logitech ERGO K860 keyboard review with a custom-made LEGO stand for Apple Trackpad
@@ -44,7 +45,7 @@ The problem it poses is that to reach the Trackpad with my right hand I have a l
 
 Here are the 3 steps to solving all these issues with Lego:
 
-### Step 1. Find enough dark-grey Lego bricks
+### Step 1. Finding enough dark-grey Lego bricks
 
 First I need to get prepared. I went through all of our Lego collection and found enough dark-grey Lego bricks that will help me prototype a perfect Lego stand that will color-match my keyboard and get the job done.
 
