--- a/en/_posts/2023-06-28-forlife.md
+++ b/en/_posts/2023-06-28-forlife.md
@@ -14,7 +14,7 @@ Choosing your trusted productivity system is hard. And once you've chosen yours,
 * TOC
 {:toc}
 
-## Lifetime productivity guarantee for Nozbe
+## Trusted productivity system for life is a promise!
 
 The Internet is constantly changing. Many Internet services come and go and it's hard to rely on them when even the biggest players such as [Google seem to be killing off](https://killedbygoogle.com) their services as fast as they make new ones.
 
@@ -40,28 +40,31 @@ New Nozbe is the natural successor to Nozbe Personal and is [constantly being up
 
 ### 1. What if the status of the Nozbe - the company - changes?
 
-While we can guarantee commitment to serving our customers, we can't really predict what the future brings. In case of unlikely IPO, sale of the company or other changes in company ownership, we will make sure to focus on serving our customers first. This means we will provide a long-term plan to make sure that Nozbe products can be relied on for as long as possible. If there comes a necessity to migrate data we will give plenty of notice and make it easy for our users and assist them in any way we can.
+While we can guarantee commitment to serving our customers, we can't really predict what the future brings. In case of unlikely IPO, sale of the company or other changes in company ownership, we will make sure to focus on serving our customers first. If there comes a necessity to migrate data we will give plenty of notice and make it easy for our users and assist them in any way we can. We guarantee that in such unlikely scenario, figuring out a long-term plan for Nozbe users will be the most important thing to do.
+
+I think our track record speaks for itself. After 16 years (in 2023, and counting!) of running [Nozbe][n] we still feel like we're just getting started so we're excited to be serving our Nozbe users for many years to come. Whichever of our products they prefer.
 
 ### 2. What if some technologies become unavailable or old?
 
 Nozbe products are built mainly using web technologies and as all of these are open-source and widely available, we are confident we can keep these products running on our servers indefinitely. This way we can guarantee to keep giving access to our products through both desktop- and mobile-based web browsers.
 
-Should some app vendors like Google (Android) or Apple terminate any kind of technologies that current Nozbe products depend on, we'll do our best to find replacements to keep our apps going.
+Should some app vendors like Google (Android) or Apple end support for any kind of technologies that current Nozbe products depend on, we'll do our best to find replacements to keep our apps going.
 
-### 3. What if you get bored and become uninterested in running Nozbe?
+### 3. What about Security and Customer Support?
 
-I think our track record speaks for itself. After 16 years (in 2023, and counting!) of running [Nozbe][n] I still feel like I'm just getting started so I'm all excited to be serving our Nozbe users for many years to come.
+For all Nozbe products we continue to offer both [latest security patches][nss] and the [first-class customer support][ns] where a real life person takes great care of each and every one of our customers,
 
-Again, in an unlikely scenario of me being ready to move on or any other significant change in the future, I guarantee figuring out a long-term plan for Nozbe users will be the most important thing to do.
+> Your data is safe. Your trusted system is secure. You're taken care of. That's our promise.
 
-**Again, we are a mission-driven company.** Not profit-driven. While profits are nice, we are here to serve our customers first and boy do we enjoy doing that!
+**Again, we are a mission-driven company.** Not purely profit-driven. While profits are nice, we are here to serve our customers first and boy do we enjoy doing that!
 
-### [Nozbe][n] is your trusted system for life.
+[Nozbe][n] is your trusted system for life.
 
 P.S. Our policy has been inspired by Basecamp's "[until the end of the Internet][b]".
 
 [nm]: https://nozbe.com/migrator?c=michaelteam
 [b]: https://basecamp.com/about/policies/until-the-end-of-the-internet
-
+[ns]: https://nozbe.com/contact?c=michaelteam
+[nss]: https://nozbe.help/general/security/?c=michaelteam
 [n]: https://michael.gratis/nozbe
 [np]: https://michael.gratis/nozbepersonal
