fixes and updates

--- a/en/_posts/2023-06-26-payless.md
+++ b/en/_posts/2023-06-26-payless.md
@@ -1,6 +1,7 @@
 ---
 tags: [business,nozbe]
 cover: "payless.jpg"
+m: https://social.nozbe.com/@michael/110611380544201161
 ---
 
 # Pay-less upgrade - how to make plan changes for your SaaS customers completely effortless
@@ -28,7 +29,7 @@ We believe there's an easier way to get this done:
 
 ## Pay-less account change - the effortless solution
 
-Team sizes change. Business requirements change. That's why we should let the customer be in charge of their team size and not ask them to pay every time they want to change something. With pay-less account change, their plan adjusts to the new circumstances quickly without any additional payments needed.
+Team sizes change. Business requirements change. That's why we should let the customer be in charge of their team size and not ask them to pay every time they want to change something. With [pay-less account change](/pricing-how/#rule-5---pay-less-switching-between-plans), their plan adjusts to the new circumstances quickly without any additional payments needed.
 
 Here's the idea:
 
@@ -81,7 +82,7 @@ Let's assume that:
 4. Let's apply the formula: `152 * 432/365 * 30/37 = 146`
 5. My next renewal of Premium 4 monthly plan (at $37) will come **in 146 days, so on December 25, 2023**.
 
-Now, how come will the renewal NOT be moved to the future in this example, even though I downgraded the plan? It's because we're [applying 20% extra savings](/pricing-how/) to yearly plans, so switching from yearly to monthly removes the 20% savings. If you continue on yearly plan though, you'll get additional days:
+Now, how come will the renewal NOT be moved to the future in this example, even though I downgraded the plan? It's because we're [applying 20% extra savings](/pricing-how/#rule-2---savings-for-yearly-payments-at-20) to yearly plans, so switching from yearly to monthly removes the 20% savings. If you continue on yearly plan though, you'll get additional days:
 
 > Same situation, but I'm downgrading from Premium 5 yearly to Premium 4 YEARLY
 
@@ -117,7 +118,7 @@ This post is the last in the series of posts I did about the pricing change:
 * **HOW?** [5 principles for designing a pricing scheme for SaaS companies - how to charge per user with savings and fairness in mind](/pricing-how/)
 * **REACTION?** [3 compliments my customers gave me this past week: worth, investment and understanding](/compliments/)
 
-I hope you enjoyed them and they were helpful for you whether you're a [Nozbe][n] customer or a fellow [entrepreneur](/business/).
+I hope you enjoyed them and they were helpful for you whether you're a [Nozbe][n] customer or a fellow [business owner](/business/).
 
 [nf]: https://nozbe.com/free?c=michaelteam
 
