--- a/en/_posts/2023-06-26-payless.md
+++ b/en/_posts/2023-06-26-payless.md
@@ -35,7 +35,7 @@ Here's the idea:
 
 > When customer changes the plan, we calculate the unused days on the old plan against the current pricing and calculate days available on the new plan. When the renewal time comes, the customer will be charged for the new plan.
 
-So basically, if someone is on a 3-user plan and adds a 4th user, we calculate this and their renewal date will come sooner as the new plan is more expensive. If on the contrary they remove a user from the plan an switch to a 2-user plan, we will add the unused time and their renewal date will come later.
+So basically, if someone is on a 3-user plan and adds a 4th user, we calculate this and their renewal date will come sooner as the new plan is more expensive. If on the contrary they remove a user from the plan and switch to a 2-user plan, we will add the unused time and their renewal date will come later.
 
 ## Formula for pay-less account change
 
@@ -98,9 +98,9 @@ Transparent. Straightforward. Fair and square.
 
 There are several things to note as we've introduced this system of pay-less account change:
 
-- The proper calculation of the formula is important as it prevents the user from tricking the system. If on the same day they upgrade and downgrade, they must end up with the same renewal date.
-- For customer convenience and reduced friction we've introduced an **automatic upgrade** system so when they add a new user to [Nozbe][n] we automatically upgrade them to a higher plan and communicate it to them by a message: *You've added a new user so we've upgraded you to Plan X and now your new renewal date is THIS*
-- To prevent constant plan switching, we didn't do it automatically for downgrades. If the customer removes a user from their Nozbe plan, we keep them on their current plan and let them add another user instead without switching plans. At any time the customer can always go to their account settings and consciously downgrade to a smaller plan if they want to.
+- The proper calculation of the formula is important as it prevents the user from tricking the system. In the above example I simplified the process by using `days_left` but under the hood we operate on time stamps (as in `time_left`) to make sure that in most cases if people upgrade and downgrade on the same day, they usually end up with the same renewal date.
+- For customer convenience and reduced friction we've introduced an **automatic upgrade** system so when they add a new user to [Nozbe][n] we automatically upgrade them to a higher plan and communicate it to them by a message: *You've added a new user so we've upgraded you to Plan X and now your new renewal date is THIS*. We also send them an email confirming the change just to be no the safe side.
+- To prevent constant plan switching, we don't do it automatically for downgrades. If the customer removes a user from their Nozbe plan, we keep them on their current plan and let them add another user without switching plans. At any time the customer can always go to their account settings and consciously downgrade to a smaller plan if they want to.
 
 ## Our customer experiences so far with pay-less account change
 
