--- a/en/_posts/2023-06-28-forlife.md
+++ b/en/_posts/2023-06-28-forlife.md
@@ -18,11 +18,9 @@ Choosing your trusted productivity system is hard. And once you've chosen yours,
 
 The Internet is constantly changing. Many Internet services come and go and it's hard to rely on them when even the biggest players such as [Google seem to be killing off](https://killedbygoogle.com) their services as fast as they make new ones.
 
-Contrary to most Internet companies, we're not profit-driven. [Nozbe is a mission-driven company](/nozbe-why/) and our mission is:
+Contrary to most Internet companies that are solely profit-driven, [Nozbe is first and foremost a mission-driven company](/nozbe-why/) and our mission is:
 
 > To help busy professionals (and their team members) manage their work and life in an simple way.
-
-Our [Nozbe][n] users depend on our products and we take this commitment very seriously. [Nozbe sp. z o.o.](/llc/) is a small and independent company without outside investors and we solely answer to our users. We want them to keep achieving their work-life balance every single day using Nozbe.
 
 ## Nozbe Personal - helping close to 1 million users since 2007
 
@@ -34,27 +32,38 @@ We launched our second iteration of [Nozbe][n] as a completely separate product 
 
 New Nozbe is the natural successor to Nozbe Personal and is [constantly being updated](https://nozbe.help/general/release-notes/) with new features and improvements.
 
-[We offer our users ways to migrate][nm] from Nozbe Personal to the new Nozbe but are not forcing them to do so. We leave the decision to our users' preferences.
-
 ## FAQ of "trusted system for life"
 
-### 1. What if the status of the Nozbe - the company - changes?
+### 1. I'm a happy user of Nozbe Personal. Do I have to switch to the new Nozbe?
 
-While we can guarantee commitment to serving our customers, we can't really predict what the future brings. In case of unlikely IPO, sale of the company or other changes in company ownership, we will make sure to focus on serving our customers first. If there comes a necessity to migrate data we will give plenty of notice and make it easy for our users and assist them in any way we can. We guarantee that in such unlikely scenario, figuring out a long-term plan for Nozbe users will be the most important thing to do.
+[We offer our users ways to migrate][nm] from Nozbe Personal to the new Nozbe but we are not forcing them to do so. We leave the decision to our users' preferences. You can keep using Nozbe Personal as long as you want to.
 
-I think our track record speaks for itself. After 16 years (in 2023, and counting!) of running [Nozbe][n] we still feel like we're just getting started so we're excited to be serving our Nozbe users for many years to come. Whichever of our products they prefer.
+While Nozbe Personal won't be updated with major new features, it will continue to receive [security updates](https://help.nozbe.com/gtd/security/) and as its user you will keep getting [first-class customer support](https://help.nozbe.com).
 
-### 2. What if some technologies become unavailable or old?
+
+### 2. What if the status of the Nozbe - the company - changes?
+
+While we can guarantee commitment to serving our customers, we can't really predict what the future brings. In case of unlikely IPO, sale of the company or other changes in company ownership, we will make sure to focus on serving our customers first.
+
+If there comes a necessity to migrate data we will give plenty of notice and make it easy for our users and assist them in any way we can. We guarantee that in such unlikely scenarios, figuring out a long-term plan for Nozbe users will be the most important thing for us to do.
+
+Our track record speaks for itself. After 16 years (in 2023, and counting!) of helping people from all around the world get things done, we still feel like we're just getting started so we're excited to be serving our Nozbe users for many years to come. Whichever of our products they prefer.
+
+### 3. What if some technologies become unavailable or old?
 
 Nozbe products are built mainly using web technologies and as all of these are open-source and widely available, we are confident we can keep these products running on our servers indefinitely. This way we can guarantee to keep giving access to our products through both desktop- and mobile-based web browsers.
 
-Should some app vendors like Google (Android) or Apple end support for any kind of technologies that current Nozbe products depend on, we'll do our best to find replacements to keep our apps going.
+Should some app vendors like Google (Android) or Apple end support for any kind of technologies that current Nozbe products depend on, we'll do our best to find replacements to keep our apps going, if possible.
 
-### 3. What about Security and Customer Support?
+### 4. What about Security and Customer Support?
 
 For all Nozbe products we continue to offer both [latest security patches][nss] and the [first-class customer support][ns] where a real life person takes great care of each and every one of our customers,
 
 > Your data is safe. Your trusted system is secure. You're taken care of. That's our promise.
+
+### 5. I have more questions…
+
+Feel free to reach out to our fantastic [Nozbe Customer Support][ns] and we'll help you in any way we can.
 
 **Again, we are a mission-driven company.** Not purely profit-driven. While profits are nice, we are here to serve our customers first and boy do we enjoy doing that!
 
