--- a/en/_posts/2023-06-28-forlife.md
+++ b/en/_posts/2023-06-28-forlife.md
@@ -3,7 +3,7 @@ tags: [nozbe]
 cover: "forlife.jpg"
 ---
 
-# Nozbe - a trusted system for life
+# Nozbe - a trusted productivity system for life
 
 Choosing your trusted productivity system is hard. And once you've chosen yours, you want it to work reliably every day to help you get things done and last forever. Nozbe is such a system for you and we guarantee it. Here's how:
 
@@ -14,13 +14,15 @@ Choosing your trusted productivity system is hard. And once you've chosen yours,
 * TOC
 {:toc}
 
-## Trusted productivity system for life is a promise!
+## Our promise: a trusted productivity system for life!
 
 The Internet is constantly changing. Many Internet services come and go and it's hard to rely on them when even the biggest players such as [Google seem to be killing off](https://killedbygoogle.com) their services as fast as they make new ones.
 
 Contrary to most Internet companies that are solely profit-driven, [Nozbe is first and foremost a mission-driven company](/nozbe-why/) and our mission is:
 
 > To help busy professionals (and their team members) manage their work and life in an simple way.
+
+That's why we promise you that we'll do everything we can to help you get things done using Nozbe for life!
 
 ## Nozbe Personal - helping close to 1 million users since 2007
 
@@ -40,24 +42,25 @@ New Nozbe is the natural successor to Nozbe Personal and is [constantly being up
 
 While Nozbe Personal won't be updated with major new features, it will continue to receive [security updates](https://help.nozbe.com/gtd/security/) and as its user you will keep getting [first-class customer support](https://help.nozbe.com).
 
-
 ### 2. What if the status of the Nozbe - the company - changes?
 
 While we can guarantee commitment to serving our customers, we can't really predict what the future brings. In case of unlikely IPO, sale of the company or other changes in company ownership, we will make sure to focus on serving our customers first.
 
 If there comes a necessity to migrate data we will give plenty of notice and make it easy for our users and assist them in any way we can. We guarantee that in such unlikely scenarios, figuring out a long-term plan for Nozbe users will be the most important thing for us to do.
 
-Our track record speaks for itself. After 16 years (in 2023, and counting!) of helping people from all around the world get things done, we still feel like we're just getting started so we're excited to be serving our Nozbe users for many years to come. Whichever of our products they prefer.
+Our track record speaks for itself. After 16 years (in 2023, and counting!) of helping people from all around the world to get things done, we still feel like we're just getting started!
+
+We're excited to be serving our Nozbe users for many years to come. Whichever of our products they prefer.
 
 ### 3. What if some technologies become unavailable or old?
 
-Nozbe products are built mainly using web technologies and as all of these are open-source and widely available, we are confident we can keep these products running on our servers indefinitely. This way we can guarantee to keep giving access to our products through both desktop- and mobile-based web browsers.
+Nozbe products are built mainly using web technologies and as all of these are open-source and widely available, we are confident we can keep these products running on our servers indefinitely. This way we can guarantee to keep giving access to our products through both desktop- and mobile- based web browsers.
 
 Should some app vendors like Google (Android) or Apple end support for any kind of technologies that current Nozbe products depend on, we'll do our best to find replacements to keep our apps going, if possible.
 
 ### 4. What about Security and Customer Support?
 
-For all Nozbe products we continue to offer both [latest security patches][nss] and the [first-class customer support][ns] where a real life person takes great care of each and every one of our customers,
+For all Nozbe products we continue to offer both [latest security patches][nss] and the [first-class customer support][ns] where a real life person takes great care of each and every one of our customers!
 
 > Your data is safe. Your trusted system is secure. You're taken care of. That's our promise.
 
@@ -65,9 +68,9 @@ For all Nozbe products we continue to offer both [latest security patches][nss] 
 
 Feel free to reach out to our fantastic [Nozbe Customer Support][ns] and we'll help you in any way we can.
 
-**Again, we are a mission-driven company.** Not purely profit-driven. While profits are nice, we are here to serve our customers first and boy do we enjoy doing that!
+Again, **we are a mission-driven company** and not purely profit-driven. While profits are nice, we are here to serve our customers first and boy do we enjoy doing that!
 
-[Nozbe][n] is your trusted system for life.
+**[Nozbe][n] is your trusted productivity system for life.**
 
 P.S. Our policy has been inspired by Basecamp's "[until the end of the Internet][b]".
 
