--- a/en/_posts/2023-07-04-evernote.md
+++ b/en/_posts/2023-07-04-evernote.md
@@ -112,7 +112,9 @@ In the end late last year [Evernote got acquired][ep] for an undisclosed sum. I'
 
 [Their fall from grace is complete][err] and now my main concern is about the service itself. The new owner [is apparently a predatory player on the App Store][b], tricking people into buying basic apps for weekly subscriptions. [There's a whole discussion on HackerNews about it][eyb] (and why [Evernote failed to realize its potential][ey]).
 
-Suffice to say, I'm concerned. We built this recent **[Evernote integration][nei]** out of respect for our current [Nozbe][n] customers but we don't know how long Evernote as we know it will stick around. Let's hope for the best!
+**Update July 9, 2023**: *[They fired all of their US-based employees](https://evernote.com/blog/moving-the-evernote-center-of-operations-to-europe/) as [The Verge confirms](https://www.theverge.com/2023/7/9/23789012/evernote-layoff-us-staff-bending-spoons-note-taking-app). Things are not looking great for them.*
+
+Suffice to say, I'm concerned. We built this recent **[Evernote integration][nei]** out of respect for our current [Nozbe][n] customers but we don't know how long Evernote as we know it will stick around or if they will cut off our API access just like Twitter and Reddit recently did. Let's hope for the best, anyway!
 
 [![{{ page.title }} nozbe integration](/img/evernote-nozbe.jpg)][nei]
 
