--- a/en/_posts/2023-09-14-ipadv.md
+++ b/en/_posts/2023-09-14-ipadv.md
@@ -14,9 +14,9 @@ People still ask me why after [more than a decade](/ipad-as-my-main-computer-pro
 * TOC
 {:toc}
 
-## After 3 months I believed iPad Pro 13" was ideal for me, after 2 years I know it is!
+## After 3 months I believed iPad Pro 13" was ideal for me, after 2 years I know it!
 
-[I wrote a comprehensive review of the M1 iPad Pro 13"](/ipad13pro) where I basically wrote that:
+[I wrote a comprehensive review of the M1 iPad Pro 13"](/ipad13pro) with these conclusions:
 
 - the mini-LED screen and 13" (Apple calls it: 12.9") screen estate is amazing
 - the bulk and weight are not an issue - not much more than 11"
@@ -31,25 +31,25 @@ All these things are still true now. Overall I'm very happy with the iPad Pro an
 
 But in this post I want to show you why this is my main computer and why it's the most versatile computer I've ever own and which accessories make it even better in my daily workflows.
 
-![{{ page.title }} My iPad Pro](/img/ipadv-my.jpg)
-
-## The iPad is a tablet that's just JOY to use!
+## iPad is a tablet that's just JOY to use!
 
 I love the form factor of a tablet. [Keyboard is optional](/part-10-they-keyboard-or-the-lack-of-it-ipad/). This super powerful M1 iPad Pro 13" is a beautiful slab of aluminum and glass that can be used for reading, watching, playing and you can do it in both portrait and landscape modes. And when you hold it in your hands, you only interact with it via touch. After more than a decade with it, it hasn't stopped being the best form of interaction for me. And it just brings joy.
+
+![{{ page.title }} My iPad Pro](/img/ipadv-my.jpg)
 
 ## I can get 90% of my work done on it!
 
 I manage my company using [Nozbe][n] - I complete projects, manage tasks and reply to comments there. I [Journal using Siri Shortcuts](/journal/), I write [texts](/markdown) using [iA Writer][ia] and [Runestone][ru]. I post things to GitHub using [Working Copy][wc]. I even can [record podcasts](/noofficefm) on it and [record and edit](/nozbe-vlog/) videos in [Luma Fusion][lf]. And I automate the heck out of it using [Siri Shortcuts](/shortcuts/). I even have a dedicated [#iPadOnly Corner](/ipad-corner) where I re-use my old [Thunderbolt Display](/display) with it as an additional screen if needed. 
 
-## 5G connection makes it a great router for family!
+## 5G makes it a great router for family!
 
 I have an unlimited data plan on both my [iPhone](/iphone) and iPad. I've enabled "Personal Hotspot" on it and set it that "Family Sharing" is automatic, meaning all of my daughters can connect to it automatically. It's very useful when we travel and my daughters need Internet connection. They use my iPad Pro as their wireless 5G router!
-
-![{{ page.title }} magic keyboard](/img/ipadv-magic.jpg)
 
 ## Magic Keyboard makes it a laptop!
 
 My main iPad Pro accessory for the last 2 years has been the Magic Keyboard. I take it with me most places as it converts my iPad Pro to a laptop-like experience. I can even work on my lap with it and it also makes a great, elevated, iPad stand.
+
+![{{ page.title }} magic keyboard](/img/ipadv-magic.jpg)
 
 I was initially hesitant about getting the white keyboard, but it has aged pretty well. After 2 years of intense use it's a little darker and worn around the corners and that's it:
 
@@ -59,57 +59,57 @@ The problem is that sometimes it partially disconnects from the iPad: like the E
 
 Other than that, the quality of the keyboard is great. All keys work as new and I can confidently type on it anytime.
 
-![{{ page.title }} Nozbe](/img/ipadv-nozbe.jpg)
-
-## Apple Pencil ✏️ makes it a great feedback device!
+## Apple Pencil makes it a great feedback device!
 
 As you can see, I have the Apple Pencil attached to it all the time and I use it daily to send visual feedback to my team. I take a screenshot, draw and then attach this to a [Nozbe][n] task. Easy-peasy!
 
-![{{ page.title }} moft](/img/ipadv-moft.jpg)
+![{{ page.title }} Nozbe](/img/ipadv-nozbe.jpg)
 
-## MOFT Snap Case makes it a great travel companion!
+## Snap Case makes it a travel companion!
 
 My friend [Augusto Pinaud](/augusto) recommended me this [Moft Snap Case][moft] for the iPad and it's great as it protects the Apple Pencil from falling off and adds an additional layer of protection to the iPad itself while being extremely thin and still compatible with the Magic Keyboard and other accessories. Thanks to it when traveling I'm not worried about losing the pencil somewhere.
 
-![{{ page.title }} folio](/img/ipadv-folio.jpg)
+![{{ page.title }} moft](/img/ipadv-moft.jpg)
 
 ## Apple's official Smart Folio is good for home and note taking
 
 I also use magnetic [Smart Folio Case][sf] on the iPad as it's a good stand for it when note taking or when watching something. Especially when I'm walking around the house with the iPad and I know I wouldn't need a keyboard as I won't be typing much!
 
-![{{ page.title }} maths](/img/ipadv-maths.jpg)
+![{{ page.title }} folio](/img/ipadv-folio.jpg)
 
 ## It's a great homework notebook with infinite canvas thanks to FreeForm app!
 
 With my 14-year old daughter we are alge-bros - meaning we do algebra together and I help her out, we do exercises together and I explain maths to her. I like maths and she enjoys learning it with me so far. What she especially enjoys is writing it all on the iPad in the FreeForm app by Apple. We have infinite canvas and can write or draw whatever we want. Joy!
 
-![{{ page.title }} Magflott](/img/ipadv-magflott.jpg)
+![{{ page.title }} maths](/img/ipadv-maths.jpg)
 
 ## MagFlött Magnetic Stand makes it a great writing machine!
 
 In my [newly redesigned](/office23flip) [home office](/office) I'm using this [MagFlött Magnetic Stand][mf] which let's me attach the iPad and use it vertically. Paired with my new [Logitech ERGO Keyboard](/ergo), they create the most optimal writing environment. This is how I'm actually writing these words to you right now.
 
-![{{ page.title }} hyperdrive usb-c](/img/ipadv-hyper.jpg)
+![{{ page.title }} Magflott](/img/ipadv-magflott.jpg)
 
-## USB-C Hub lets me edit footage on the go
+## USB-C Hub lets me edit video on the go
 
 I'm using [HyperDrive USB-C Hub for the iPad][hyper] for additional connections to my iPad. [I keep in my travel pouch](/pouch/). Thanks to this I can record footage on my drone, pop in the SD card and start editing the video in [Luma Fusion][lf] right away.
 
-![{{ page.title }} films](/img/ipadv-films.jpg)
+![{{ page.title }} hyperdrive usb-c](/img/ipadv-hyper.jpg)
 
 ## The mini-LED screen combined with iPad streaming apps makes it a great entertainment device!
 
 The mini-LED screen is amazing. Now, combine this with a fact, that on all major streaming services: Apple TV, Netflix, Amazon Prime, Disney+ and HBO Max - you can download movies and series to the iPad directly, you have an amazing entertainment box!
 
+![{{ page.title }} films](/img/ipadv-films.jpg)
+
 Additionally you can connect two [AirPods headphones](/airpods/) at the same time, I can watch a movie or tv series with my wife on an airplane with noise cancelling!
 
 When we're just together in a hotel room, we just use the external speakers which are really great and loud!
 
+## Bonus - iPad Pro is a tele-prompter!
+
+One of the things I do as the CEO of [Nozbe][n] is that I record messages to my customers ([or my team](/nozbe-vlog/)) using [my streaming setup](/streaming/) where I have a professional camera installed and a Tele prompter. Well, after I've edited a script of what I'm about to say to people, I copy it to the [TelePrompter PAD][tele] on the same iPad and just put it right below the teleprompter itself. That's right, I was just using my iPad for writing and now I'm using it as a prompting device! From start to finish with the same device!
+
 ![{{ page.title }} tele prompter](/img/ipadv-prompter.jpg)
-
-## Bonus - iPad Pro is a great Tele prompter!
-
-One of the things I do as the CEO of [Nozbe][n] is that I record messages to my customers using [my streaming setup](/streaming/) where I have a professional camera installed and a Tele prompter. Well, after I've edited a script of what I'm about to say to people, I copy it to the [TelePrompter PAD][tele] on the same iPad and just put it right below the teleprompter itself. That's right, I was just using my iPad for writing and now I'm using it as a prompting device!
 
 ## Which laptop can do all of the above? All of these things in one device? Only iPad!
 
