--- a/pl/_posts/2023-10-03-wybory.md
+++ b/pl/_posts/2023-10-03-wybory.md
@@ -39,7 +39,7 @@ Jeśli czuję się nieswojo mam prawo zakończyć rozmowę i odejść. Nie ucisz
 
 ## ✌️ Trzeba iść i oddać WAŻNY GŁOS! 🇵🇱
 
-Dopóki mamy demokrację a nie rząd autorytarny, głosowanie jest naszym obowiązkiem. Oddanie pustego głosu, bo "oferta słaba" się nie liczy. Wybieramy pomiędzy z tego co jest. Nasi dziadowie walczyli o taką wolność.
+Dopóki mamy demokrację a nie rząd autorytarny, głosowanie jest naszym obowiązkiem. Oddanie pustego głosu, bo "oferta słaba" się nie liczy. Wybieramy z pomiędzy tego co jest. Nasi dziadowie walczyli o taką wolność.
 
 ## 🔟 Matematyka wyborcza - czemu 2 osoby decydują o losie 10!
 
