--- a/en/_posts/2023-02-15-2022.md
+++ b/en/_posts/2023-02-15-2022.md
@@ -1,5 +1,5 @@
 ---
-tags: [year]
+tags: [year,featured]
 cover: "2022.jpg"
 m: https://social.nozbe.com/@michael/109869380445308621
 l: https://www.linkedin.com/pulse/my-2022-review-did-you-do-yours-michael-sliwinski
