--- a/en/_posts/2023-06-26-payless.md
+++ b/en/_posts/2023-06-26-payless.md
@@ -1,5 +1,5 @@
 ---
-tags: [business,nozbe]
+tags: [business,nozbe,featured]
 cover: "payless.jpg"
 m: https://social.nozbe.com/@michael/110611380544201161
 ---
