--- a/en/_posts/2023-09-14-ipadv.md
+++ b/en/_posts/2023-09-14-ipadv.md
@@ -1,5 +1,5 @@
 ---
-tags: [ipadonly]
+tags: [ipadonly,featured]
 cover: "ipadv.jpg"
 m: https://social.nozbe.com/@michael/111064132940956295
 t: https://twitter.com/MSliwinski/status/1702697725375250835
