--- a/en/_posts/2023-06-05-nozbe-why.md
+++ b/en/_posts/2023-06-05-nozbe-why.md
@@ -1,5 +1,5 @@
 ---
-tags: [business,nozbe]
+tags: [business,nozbe,featured]
 cover: "nozbe-why.jpg"
 m: https://social.nozbe.com/@michael/110491999070888886
 ---
