--- a/en/_posts/2023-07-04-evernote.md
+++ b/en/_posts/2023-07-04-evernote.md
@@ -1,5 +1,5 @@
 ---
-tags: [business,nozbe]
+tags: [business,nozbe,featured]
 cover: "evernote.jpg"
 m: https://social.nozbe.com/@michael/110656915226861088
 ---
