updates to Journal 3 with 3.1 version!

--- a/en/_posts/2023-10-16-journal3.md
+++ b/en/_posts/2023-10-16-journal3.md
@@ -49,6 +49,8 @@ I've also prepared translated versions:
 
 This additional Siri Shortcut is very simple and just adds the *planning* functionality to the main Journal 3.0 Shortcut. It isn't supposed to be run separately. You still keep using just the main journaling Siri Shortcut.
 
+I've also added a simple ["Open Today"][j3o] Siri Shortcut to open today's day with just one click. I keep this shortcut on my home screen in a widget. Here's Spanish 🇪🇸 ["Abrir Hoy"][j3eso] and Polish 🇵🇱["Otwórz Dziś"]][j3plm].
+
 ## Additional improvements - simplified dates, modularity, calendar review and better main menu
 
 Apart from the main three improvements: Apple Notes support, easier translations and integrated Morning Planning, I've tweaked a few more things while I was at it:
@@ -75,9 +77,16 @@ And if you manage to get your daily journaling habit going, feel free to switch 
 
 And if you feel grateful, try out [Nozbe][n] or convince your boss to try it to manage projects and get done tasks in your company. I'd really appreciate it.
 
-[j3]: https://www.icloud.com/shortcuts/759d961ae9a247a1b6aa7f8e520e1e59
-[j3es]: https://www.icloud.com/shortcuts/efe4a6004c344609b8ae02891941b490
-[j3pl]: https://www.icloud.com/shortcuts/5c295a4efd934c6d870cfb1990df86fd
+
+[j3]: https://www.icloud.com/shortcuts/eac9efc4c5d7488ebe0a1874b75840a8
+[j3es]: https://www.icloud.com/shortcuts/2b7884fd37b2474da1beb96b7711f5af
+[j3pl]: https://www.icloud.com/shortcuts/f25ab65899e74bbcbcb6a61adc178109
+[j3o]: https://www.icloud.com/shortcuts/dbcb8dbd05da404bbaf805a70bb867d9
+[j3eso]: https://www.icloud.com/shortcuts/8f6a276759f34b58bc2adab4f4e061df
+[j3plo]: https://www.icloud.com/shortcuts/94aa1d3e74e54a189f84fd47e2c2dfd9
+[j3x]: https://www.icloud.com/shortcuts/759d961ae9a247a1b6aa7f8e520e1e59
+[j3esx]: https://www.icloud.com/shortcuts/efe4a6004c344609b8ae02891941b490
+[j3plx]: https://www.icloud.com/shortcuts/5c295a4efd934c6d870cfb1990df86fd
 [j3m]: https://www.icloud.com/shortcuts/ea2b8d8ccd634d6596bc88d7521b4507
 [j3esm]: https://www.icloud.com/shortcuts/a28014d33e2a4fe1acd64c6beea08a2b
 [j3plm]: https://www.icloud.com/shortcuts/7e83a2b485fa4331945e6088536c48d5
