--- a/pl/_posts/2022-04-22-czytanie.md
+++ b/pl/_posts/2022-04-22-czytanie.md
@@ -5,7 +5,7 @@ img: "czytanie.jpg"
 
 # Czytanie na dziś jako skrót Siri na iPhone, iPad lub Mac
 
-Jak już kilka razy wspominałem na tym blogu, [jestem katolikiem](/catholic/) o [liberalnych poglądach](/white/). Jednym z wyzwań codziennego dnia jest regularna modlitwa, a szczególnie rozważanie Pisma Świętego. Dlatego aby sobie uprościć sprawę, [stworzyłem skrót Siri](https://www.icloud.com/shortcuts/8768cb0a31da4c89a3c04b97c407f18a), który codziennie pobiera i wyświetla mi czytanie na dziś:
+**Aktualizacja 13 listopada 2023:** *Dodałem [uproszczony Skrót][b], który działa mi nawet na zegarku - opis na końcu artykułu.* Jak już kilka razy wspominałem na tym blogu, [jestem katolikiem](/catholic/) o [liberalnych poglądach](/white/). Jednym z wyzwań codziennego dnia jest regularna modlitwa, a szczególnie rozważanie Pisma Świętego. Dlatego aby sobie uprościć sprawę, [stworzyłem skrót Siri][c], który codziennie pobiera i wyświetla mi czytanie na dziś:
 
 <!--More-->
 
@@ -15,19 +15,30 @@ Jak już kilka razy wspominałem na tym blogu, [jestem katolikiem](/catholic/) o
 
 Najpierw:
 
-### [Pobierz i zainstaluj Skrót Siri na iPhone, iPad lub Mac](https://www.icloud.com/shortcuts/8768cb0a31da4c89a3c04b97c407f18a)
+### [Pobierz i zainstaluj Skrót Siri na iPhone, iPad lub Mac][c]
 
 Skrót sprawdza, czy jakaś data jest zawarta w schowku, jeśli nie to prosi o podanie daty (z zaznaczeniem dzisiejszej) i następnie pobiera czytanie na dziś z portalu [Niezbędnik.Niedziela.pl](https://niezbednik.niedziela.pl/), któremu to bardzo dziękuję za takie świetne przygotowanie tekstów.
 
 Tak wyświetlony tekst pojawia mi się w oknie na telefonie i jest gotowy do czytania. Dzięki temu nie mam wymówki aby tekstu nie przeczytać i potem nad nim się nie zastanowić i go przemyśleć.
 
-## Polecam codzienne pisanie pamiętnika!
+## Polecam codzienne pisanie dziennika!
 
-Po angielsku opisałem [jak codziennie piszę pamiętnik](/journal20/), także za pomocą skrótu Siri. I właśnie do tego skrótu dodałem sobie akcję "Otwórz skrót" i po zapisaniu pamiętnika pojawia mi się czytanie na dziś:
+Od 2016 roku codziennie [piszę dziennik](/pl/dziennik3/), także za pomocą skrótu Siri. I właśnie do tego skrótu dodałem sobie akcję "Otwórz skrót" i po zapisaniu pamiętnika pojawia mi się czytanie na dziś:
 
 ![{{ page.title }} 2](/img/czytanie-2.jpg)
 
-Polecam!
+## Uproszczony Skrót do dziennika, który też działa na zegarku [Apple Watch](/applewatch/)!
 
+Ostatnio zmodyfikowałem i uprościłem sobie znacznie ten Skrót i dodałem nowy:
+
+### [Skrót "Bible"][b]
+
+Ten skrót po prostu sprawdza datę dzisiejszą i otwiera czytanie na dziś. Został dodatkowo zoptymalizowany pod Apple Watch i pozwala mi czytać prosto na zegarku:
+
+![{{ page.title }} Ultra Bible](/img/ultra-bible.jpg)
+
+Wystarczy zainstalować sobie ten skrót i potem na zegarku odpalić aplikację "Skróty" i wtedy uruchomić ten skrót. Zaciąganie tekstu z "czytania na dziś" trwa wprawdzie około 10 sekund, ale warto poczekać aby potem sobie móc go przeczytać i przemodlić!
+
+[c]: https://www.icloud.com/shortcuts/8768cb0a31da4c89a3c04b97c407f18a
 [n]: https://michael.gratis/nozbe_pl
 [np]: https://michael.gratis/nozbepersonal_pl
