fixed ultra and added band info

--- a/en/_posts/2023-11-16-ultra.md
+++ b/en/_posts/2023-11-16-ultra.md
@@ -5,7 +5,7 @@ cover: "ultra.jpg"
 
 # Why a small-wrist guy switched to Apple Watch Ultra?
 
-I've been using [Apple Watch](/applewatch/) since the [very beginning](/watch-5days/) but because I'm not tall and I don't have large wrists, I always stuck with the smaller model. Until now. I just bought an **Apple Watch Ultra 2** and despite its size it's the best Apple Watch to date. It's beautiful, it's joy to use and most of all, finally it has the battery life a smartwatch should have:
+I've been using [Apple Watch](/applewatch/) since the [very beginning](/watch-5days/) but because I'm not tall and I don't have large wrists, I always stuck with the smaller model. Until now. I just bought an [**Apple Watch Ultra 2**](https://www.apple.com/apple-watch-ultra-2/){:target='_blank'} and despite its size it's the best Apple Watch to date. It's beautiful, it's joy to use and most of all, finally it has the battery life a smartwatch should have:
 
 <!--More-->
 
@@ -30,6 +30,8 @@ After more than a month of using the Apple Watch Ultra I have a theory that it's
 I even sleep with it. I only charge it after a training when I'm in the shower and that's enough. It usually goes from whatever it had to around 70-90% and that's good enough for me. I have no anxiety with 80% of charge because I know it's gonna last me for more than 24 hours with a workout in between.
 
 I don't have to fiddle with settings [like I did on previous Apple Watches](/tri15) when I go on a long bike ride. Last week I did a full-day 100km bike ride with 2000m of elevation gain and after all this the watch still had 40% of juice and I had all the wifi/cellular/screen on all the time in workout mode.
+
+And if you're curious, I'm not using the Ultra-exclusive bands, but I'm rocking [45mm Desert Stone Nike Sport Band](https://www.apple.com/shop/product/MUUQ3AM/A/41mm-desert-stone-nike-sport-band-s-m) - it looks great and my wrist doesn't sweat that much thanks to the holes in it.
 
 ## The "Action button" is very useful!
 
