--- a/en/_posts/2023-11-16-ultra.md
+++ b/en/_posts/2023-11-16-ultra.md
@@ -45,7 +45,7 @@ I love the design. It's new. It's different from the other Apple Watches and the
 
 ## Thanks to people who also pushed me to try the Ultra!
 
-My friend [Łukasz from iMad](https://www.linkedin.com/in/%C5%82ukasz-banaszak-77464423a) and YouTuber iJustine are also people with small wrists and seeing how they embraced the Apple Watch Ultra lifestyle also motivated me to give it a try, so thank you 🙏 
+My friend [Łukasz from iMad](https://www.linkedin.com/in/%C5%82ukasz-banaszak-77464423a) and YouTuber [iJustine](https://www.youtube.com/@iJustine) are also people with small wrists and seeing how they embraced the Apple Watch Ultra lifestyle also motivated me to give it a try, so thank you 🙏 
 
 {% include video.html id="6J5o4J-Ttp8" %}
 
