--- a/pl/_posts/2022-04-22-czytanie.md
+++ b/pl/_posts/2022-04-22-czytanie.md
@@ -5,7 +5,7 @@ img: "czytanie.jpg"
 
 # Czytanie na dziś jako skrót Siri na iPhone, iPad lub Mac
 
-**Aktualizacja 13 listopada 2023:** *Dodałem [uproszczony Skrót][b], który działa mi nawet na zegarku - opis na końcu artykułu.* Jak już kilka razy wspominałem na tym blogu, [jestem katolikiem](/catholic/) o [liberalnych poglądach](/white/). Jednym z wyzwań codziennego dnia jest regularna modlitwa, a szczególnie rozważanie Pisma Świętego. Dlatego aby sobie uprościć sprawę, [stworzyłem skrót Siri][c], który codziennie pobiera i wyświetla mi czytanie na dziś:
+**Aktualizacja 13 listopada 2023:** *Dodałem **[uproszczony Skrót][b]**, który działa mi nawet na zegarku - opis na końcu artykułu.* Jak już kilka razy wspominałem na tym blogu, [jestem katolikiem](/catholic/) o [liberalnych poglądach](/white/). Jednym z wyzwań codziennego dnia jest regularna modlitwa, a szczególnie rozważanie Pisma Świętego. Dlatego aby sobie uprościć sprawę, [stworzyłem skrót Siri][c], który codziennie pobiera i wyświetla mi czytanie na dziś:
 
 <!--More-->
 
@@ -27,7 +27,7 @@ Od 2016 roku codziennie [piszę dziennik](/pl/dziennik3/), także za pomocą skr
 
 ![{{ page.title }} 2](/img/czytanie-2.jpg)
 
-## Uproszczony Skrót do dziennika, który też działa na zegarku [Apple Watch](/applewatch/)!
+## Uproszczony Skrót do czytania na dziś, który też działa na zegarku [Apple Watch](/applewatch/)!
 
 Ostatnio zmodyfikowałem i uprościłem sobie znacznie ten Skrót i dodałem nowy:
 
@@ -37,7 +37,7 @@ Ten skrót po prostu sprawdza datę dzisiejszą i otwiera czytanie na dziś. Zos
 
 ![{{ page.title }} Ultra Bible](/img/ultra-bible.jpg)
 
-Wystarczy zainstalować sobie ten skrót i potem na zegarku odpalić aplikację "Skróty" i wtedy uruchomić ten skrót. Zaciąganie tekstu z "czytania na dziś" trwa wprawdzie około 10 sekund, ale warto poczekać aby potem sobie móc go przeczytać i przemodlić!
+Wystarczy zainstalować sobie ten skrót i potem na zegarku odpalić aplikację "Skróty" i wtedy uruchomić ten skrót. Zaciąganie tekstu z "czytania na dziś" trwa wprawdzie około 10 sekund, ale warto poczekać aby potem sobie móc go przeczytać i na spokojnie przemodlić czytanie!
 
 [b]: https://www.icloud.com/shortcuts/23b3c04018e747448b345666d237e330
 [c]: https://www.icloud.com/shortcuts/8768cb0a31da4c89a3c04b97c407f18a
