--- a/en/_posts/2023-11-16-ultra.md
+++ b/en/_posts/2023-11-16-ultra.md
@@ -19,7 +19,7 @@ However, testing it side-by-side, I wasn't that outraged. It didn't look that ri
 
 ![{{ page.title }} size](/img/ultra-size.jpg)
 
-At the end of the day, what made me buy it was that my two-year old *Series 7* had only 80% of its original battery capacity and very often it wouldn't last me until the end of the day. Or worse yet, it'd die while I was doing sports. So when Apple announced its second revision of the Ultra form factor, I went ahead and ordered it.
+At the end of the day, what made me buy it was that my two-year old *Series 7* had only 80% of its original battery capacity and very often it wouldn't last me until the end of the day. Or worse yet, it'd die while [I was doing sports](/sports). So when Apple announced its second revision of the Ultra form factor, I went ahead and ordered it.
 
 ## 🔋 Battery life in Apple Watch Ultra 2 is no joke - it's not an issue anymore!
 
