--- a/pl/_posts/2023-12-01-iphone15.md
+++ b/pl/_posts/2023-12-01-iphone15.md
@@ -1,6 +1,6 @@
 ---
 tags: [imagazine]
-cover: "iphone15.jpg"
+cover: "iphone15-ultra.jpg"
 ---
 
 # Dlaczego po małym telefonie i zegarku, przyszła kolej na 15 Pro i Ultra 2?
@@ -64,7 +64,7 @@ Nasz redaktor naczelny Dominik od roku ma zegarek Ultra i szaleje z ilością tr
 
 Tak czy owak, trenuję i tak sporo i tutaj pojawiło się moje drugie FOMO. Pozazdrościłem takim gościom jak Dominik zegarka, którego bateria trzyma cały dzień na luzie nawet przy intensywnych treningach. U mnie niestety sprawa nie wyglądała tak różowo, bo na lewej ręcę miałem Apple Watch serii 7, którego bateria po dwóch latach intensywnego używania spadła już i tylko do 80% wydajności. Do tego używam wersji z łączem komórkowym bo biegam bez telefonu, więc czasami po prostu bateria nie dożywała do końca treningu, co było mega frustrujące.
 
-![{{ page.title }} - zegarek](/img/ultra.jpg)
+![{{ page.title }} - zegarek](/img/ultra-size.jpg)
 
 Kilka razy odwiedzałem sklepy Apple i przymierzałem zegarek w rozmiarze większym oraz Ultra. Zdecydowałem, że jak miałbym już zmienić na inny rozmiar, to między 45mm a Ultra już nie widzę takiej wielkiej różnicy a ten drugi po prostu lepiej wygląda! Z czasem też przyzwyczajałem się do jego rozmiarów i nie wydawały mi się aż tak niedorzeczne, biorąc pod uwagę moich kolegów z gigantycznymi Garminami na swoich nadgarstkach.
 
