--- a/en/_posts/2023-11-21-iphone15.md
+++ b/en/_posts/2023-11-21-iphone15.md
@@ -61,7 +61,7 @@ So to re-cap I'm getting 9 new features with the iPhone 15 Pro upgrade:
 
 - 3 x iPhone 13 Pro features: ProMotion display, 3X telephoto lens and better battery life
 - 3 x iPhone 14 Pro features: Dynamic Island, Always-on display and 48MP camera
-- 3 iPhone 15 Pro features: lighter weight, USB-C and Action Button!
+- 3 x iPhone 15 Pro features: lighter weight, USB-C and Action Button!
 
 Yep, for a tech enthusiast like me these additional 9 features are more than worth the upgrade. While iPhone 14 Pro features were nice-to-have's, it's the iPhone 15 Pro with it's fundamental design changes that pushed me over the edge to get it.
 
